--- a/src/components/Testimonials/style.scss
+++ b/src/components/Testimonials/style.scss
@@ -23,7 +23,7 @@ $neutral-dark: #000000;
   align-items: center;
   padding: 0 1em;
   .testimonial-square{
-    background-color: $theme-testimonials-bkg;
+    // background-color: $theme-testimonials-bkg;
     flex-basis: 30%;
     width: 360px;
     min-width: 325px;
