--- a/src/components/Intro/style.scss
+++ b/src/components/Intro/style.scss
@@ -1,9 +1,6 @@
 button.get-started {
   width: 300px;
   height: 60px;
-  /* background-color: #65e2d9;
-  background-image: linear-gradient(to right, #65e2d9, #339ecc); */
-  /* color: white; */
   border-radius: 30px;
   font-size: 1em;
 }
@@ -19,18 +16,11 @@ p {
 }
 
 .intro-container {
-  background-color: #1c2431;
   background-size: contain;
   background-repeat: no-repeat;
-  /* background-image: url("../images/bg-curvy-desktop.svg"); */
   background-position: bottom;
 }
 
-@media (max-width: 700px) {
-  .intro-container {
-    /* background-image: url("../images/bg-curvy-mobile.svg"); */
-  }
-}
 .intro {
   display: flex;
   flex-direction: column;
@@ -39,6 +29,14 @@ p {
   max-width: 680px;
   margin: auto;
   text-align: center;
+  padding: 0 3em;
+  img {
+    width: 100%;
+    margin: 5em 0 5em;
+  }
+  .get-started {
+    margin: 3em 0 5em;
+  }
 }
 .intro p {
   max-width: 580px;
