--- a/src/components/Testimonials/style.scss
+++ b/src/components/Testimonials/style.scss
@@ -1,15 +1,3 @@
-$theme-main-bkg: hsl(218, 28%, 13%);
-$theme-intro-bkg: hsl(217, 28%, 15%);
-$theme-footer-bkg: hsl(216, 53%, 9%);
-$theme-testimonials-bkg: hsl(219, 30%, 18%);
-
-$accent-1: hsl(176, 68%, 64%);
-$accent-2: hsl(198, 60%, 50%);
-
-$neutral-light: hsl(0, 0%, 100%);
-
-$neutral-dark: #000000;
-
 /* Testimonials */
 
 .testimonials {
@@ -23,7 +11,6 @@ $neutral-dark: #000000;
   align-items: center;
   padding: 0 1em;
   .testimonial-square{
-    // background-color: $theme-testimonials-bkg;
     flex-basis: 30%;
     width: 360px;
     min-width: 325px;
@@ -58,30 +45,27 @@ $neutral-dark: #000000;
     }
   }
 }
-.testimonial-square.first:after {
-  display: block;
+.testimonial-quotation {
   position: relative;
-  content:"\201C";
   font-size: 15em;
   font-family: sans-serif;
-  color: $accent-1;
-  left: -50px;
-  top: -160px;
+  left: 40px;
+  top: 30px;
 }
 
-@media (max-width: 700px) {
+@media (max-width: 755px) {
   .testimonials {
     flex-direction: column;
-    height: 650px;
+    height: 800px;
     margin-top: 7em;
     .testimonial-square {
       margin-bottom: 2em;
       max-height: 190px;
     }
-    .testimonial-square.first:after  {
+    .testimonial-quotation  {
       font-size: 6em;
-      left: -30px;
-      top: -195px;
+      left: -180px;
+      top: 100px;
     }
   }
 }
